# deep-learning-experiments

./: README.md
cats_and_dogs_playground/: .coverage  README.md  TF_catdog_GN.ipynb  TF_experiment_lms.py  default.py  dev.ipynb  inference.py  inference_web.py  main.ipynb  model.py  pyproject.toml  requirements.txt  run.py  run_experiment.py  test.json  train.py
cats_and_dogs_playground/.ipynb_checkpoints/: Keras_catdog_GN-checkpoint.ipynb  Normalization_experiment_with_cifar10-checkpoint.ipynb  TF_catdog_GN-checkpoint.ipynb  main-checkpoint.ipynb
cats_and_dogs_playground/backup_functions/: TF_HandyTrainer.py  data_loader.py
cats_and_dogs_playground/configs/: R50v1_BN_BZ1_Pretrain.yaml  R50v1_BN_BZ1_noPretrain.yaml  R50v1_BN_BZ32_Pretrain.yaml  R50v1_BN_BZ32_noPretrain.yaml  R50v1_GN_BZ1_Pretrain.yaml  R50v1_GN_BZ1_noPretrain.yaml  R50v1_GN_BZ32_Pretrain.yaml  R50v1_GN_BZ32_noPretrain.yaml  R50v1_GNv2_BZ32_noPretrain.yaml  R50v2_BN_BZ1_Pretrain.yaml  R50v2_BN_BZ1_noPretrain.yaml  R50v2_BN_BZ32_Pretrain.yaml  R50v2_BN_BZ32_noPretrain.yaml  R50v2_GN_BZ1_Pretrain.yaml  R50v2_GN_BZ1_noPretrain.yaml  R50v2_GN_BZ32_Pretrain.yaml  R50v2_GN_BZ32_noPretrain.yaml  R50v2_GNv2_BZ1_Pretrain.yaml  R50v2_GNv2_BZ1_noPretrain.yaml  R50v2_GNv2_BZ32_Pretrain.yaml  R50v2_GNv2_BZ32_noPretrain.yaml  R50xt_BN_BZ1_Pretrain.yaml  R50xt_BN_BZ1_noPretrain.yaml  R50xt_BN_BZ32_Pretrain.yaml  R50xt_BN_BZ32_noPretrain.yaml  R50xt_GN_BZ1_Pretrain.yaml  R50xt_GN_BZ1_noPretrain.yaml  R50xt_GN_BZ32_Pretrain.yaml  R50xt_GN_BZ32_noPretrain.yaml
cats_and_dogs_playground/inference/: config.py  utils.py
(+90 files in other folders)
